@@ -1,6 +1,10 @@
 Knot Resolver 5.5.1 (2022-mm-dd)
 ================================
 
+Improvements
+------------
+- daemon/tls: disable TLS resumption via tickets for TLS <= 1.2 (#742, !1295)
+
 Bugfixes
 --------
 - modules/dns64: fix incorrect packet writes for cached packets (#727, !1275)
